# tuya-connect-kit-for-mqtt-embedded-c

./: .gitignore  .gitmodules  CMakeLists.txt  PortingGuide.md  README.md  tuyaFilePaths.cmake
certs/: tuya_rootCA.c  tuya_rootCA.crt
examples/: CMakeLists.txt
examples/cellular_demo/: CMakeLists.txt  cellular_demo.c
examples/data_model_basic_demo/: CMakeLists.txt  data_model_basic_demo.c
examples/subdevice_basic_demo/: CMakeLists.txt  subdevice_basic_demo.c  tuya_cacert.h
examples/switch_demo/: CMakeLists.txt  qrencode_print.c  switch_demo.c  tuya_config.h
examples/switch_demo_non_qrcode/: CMakeLists.txt  switch_demo_non_qrcode.c  tuya_config.h
examples/tuya_ota_demo/: CMakeLists.txt  tuya_config.h  tuya_ota_demo.c
examples/wifi_provisioning_demo/: CMakeLists.txt  README.md  README_ZH.md  wifi_provisioning_demo.c
include/: atop_base.h  atop_service.h  cipher_wrapper.h  core_http_config.h  core_mqtt_config.h  file_download.h  matop_service.h  mqtt_bind.h  mqtt_service.h  tuya_ble_service.h  tuya_config_defaults.h  tuya_endpoint.h  tuya_iot.h  tuya_ota.h  tuya_url.h  tuya_wifi_provisioning.h  tuyalink_core.h
interface/: ble_interface.h  http_client_interface.h  mqtt_client_interface.h  network_interface.h  storage_interface.h  system_interface.h  tkl_bluetooth_def.h
libraries/: CMakeLists.txt  mbedtlsFilePaths.cmake
libraries/coreHTTP/: httpFilePaths.cmake
libraries/coreHTTP/source/: core_http_client.c
libraries/coreMQTT/: mqttFilePaths.cmake
libraries/coreMQTT/source/: core_mqtt.c  core_mqtt_serializer.c
libraries/coreMQTT/source/include/: core_mqtt.h  core_mqtt_serializer.h
libraries/mbedtls/include/mbedtls/: config.h
middleware/: CMakeLists.txt  core_http_config.h  core_mqtt_config.h  http_client_wrapper.c  mqtt_client_wrapper.c  transport_interface.h
platform/: CMakeLists.txt
platform/linux/: CMakeLists.txt  ble_wrapper.c  mbedtls_sockets_wrapper.c  network_wrapper.c  storage_wrapper.c  system_wrapper.c
platform/posix/: CMakeLists.txt  storage_wrapper.c
src/: CMakeLists.txt  atop_base.c  atop_service.c  cipher_wrapper.c  file_download.c  iotdns.c  matop_service.c  mqtt_bind.c  mqtt_service.c  tuya_ble_service.c  tuya_endpoint.c  tuya_iot.c  tuya_ota.c  tuya_url.c  tuya_wifi_provisioning.c  tuyalink_core.c
utils/: CMakeLists.txt  MultiTimer.c  MultiTimer.h  aes_inf.c  aes_inf.h  base64.c  base64.h  cipher_wrapper.c  cipher_wrapper.h  crc32.c  crc32.h  log.c  log.h  tuya_cloud_error_code.h  tuya_cloud_types.h  tuya_error_code.h  tuya_log.h  uni_md5.c  uni_md5.h
